--- a/5.html
+++ b/5.html
@@ -4,7 +4,8 @@
 		<title></title>
 			<link rel="stylesheet" type="text/css" href="Главное.css">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-			!-- Bootstrap CSS (jsDelivr CDN) -->
+		<!-- Bootstrap CSS (jsDelivr CDN) -->
+
 		  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		  <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
 		  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
