--- a/Contact.html
+++ b/Contact.html
@@ -70,7 +70,7 @@
 <div class="col-12 col-xs-12 col-md-12 col-xl-12 col-lg-12" >
   <div class="row">
       <div class="col-6 col-xs-6 col-md-6 col-xl-6 col-lg-6">
-                <h2 style=" font-size: 15pt; font-family: cursive; margin-bottom: 3%; color: #A9A9A9; margin-top: 6%;">НАПИШИ МНЕ ЛИЧНО</h2>
+                <h2 style=" font-size: 15pt; font-family: cursive; margin-bottom: 3%; color: #A9A9A9; margin-top: 6%;">НАПИШИ МЕНІ ОСОБИСТО</h2>
                 <div class="line"></div>
                 <form>
                   <input style="margin-top: 3%;"  type="text" id="name" placeholder="*NAME">
