--- a/Avtor.html
+++ b/Avtor.html
@@ -33,7 +33,7 @@
     <ul class="navbar-nav">
 
         <li class="nav-item active">
-        <a   class="nav-link" style="font-size: 15pt; font-family: Courier New; "  href="index.html"><b>Главне</b></a>
+        <a   class="nav-link" style="font-size: 15pt; font-family: Courier New; "  href="index.html"><b>Головне</b></a>
       </li>
 
 
@@ -71,6 +71,7 @@
   <div class="row">
       <div class="col-6 col-xs-6 col-md-6 col-xl-6 col-lg-6">
                 <h2 style=" font-size: 15pt; font-family: cursive; margin-bottom: 3%; color: #A9A9A9; margin-top: 6%;">ПРО ФОТОГРАФА</h2>
+	      <h2 style=" font-size: 15pt; font-family: cursive; margin-bottom: 3%; color: #A9A9A9; margin-top: 6%;">Томас Уорен</h2>
                 <div class="line"></div>
 
                 <p  style=" font-size: 10pt; font-family: Courier; margin-top: 3%;" >У мене є сильне прагнення знайти унікальність у своїх зображеннях, зображуючи красу африканських околиць та їх дикої природи, досліджуючи фотографії таким чином, який надихав би людей у всьому світі подорожувати та відвідувати дикі райони Африки та знайомитися з образами, які був захоплений.</p>
