--- a/2.html
+++ b/2.html
@@ -40,7 +40,7 @@
     <ul class="navbar-nav">
 
         <li class="nav-item active">
-        <a   class="nav-link" style="font-size: 15pt; font-family: Courier New; "  href="index.html"><b>Главне</b></a>
+        <a   class="nav-link" style="font-size: 15pt; font-family: Courier New; "  href="index.html"><b>Головне</b></a>
       </li>
 
 
